--- a/bash/.tmux.conf
+++ b/bash/.tmux.conf
@@ -10,17 +10,13 @@ set -g xterm-keys on
 # Set General prefix key
 set -g prefix C-s
 
-
-
 set -g status-keys vi
 
 set -g history-limit 1000000
 
+set -g window-status-current-style bg=cyan,bold
 
-
-set -g status-bg green
-setw -g window-status-current-bg cyan
-setw -g window-status-current-attr bold
+set -g status-style bg=green,fg=black
 
 # look good
 set -g default-terminal "screen-256color"
@@ -31,3 +27,9 @@ bind-key C-t last-window
 
 setw -g monitor-activity on
 set -g visual-activity on
+
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
